load("@rules_java//java:defs.bzl", "java_binary")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//tools/bazel/pmd:defs.bzl", "pmd")

# to run:
# bazel run //160-stress-tester:module -- server /Users/matt/portal3/160-stress-tester/config.yml
java_binary(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    main_class = "io.harness.testing.DelegateTaskStressTestApplication",
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//160-stress-tester/src/main/proto:160_stress_tester_java_proto",
        "//910-delegate-service-driver:module",
        "@maven//:io_dropwizard_dropwizard_assets",
    ],
)

# to run:
# bazel run //160-stress-tester:generator > output/file.here
java_binary(
    name = "generator",
    srcs = glob(["scripts/main/**/*.java"]),
    main_class = "io.harness.testing.StressTestGeneratorApplication",
    resources = [],
    visibility = ["//visibility:public"],
    deps = ["@maven//:com_google_guava_guava"] + [
        "//160-stress-tester/src/main/proto:160_stress_tester_java_proto",
        "//920-delegate-service-beans:module",
        "//980-commons:module",
        "@maven//:com_google_inject_guice",
    ],
)

checkstyle()

pmd()
