load("@rules_java//java:defs.bzl", "java_binary")
load("//:macros.bzl", "run_analysis")

# to run:
# bazel run //160-stress-tester:module -- server `pwd`/160-stress-tester/config.yml
java_binary(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    main_class = "io.harness.stresstesting.execution.DelegateTaskStressTestApplication",
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_guava_guava",
    ] + [
        "//:lombok",
        "//910-delegate-service-driver:module",
        "@maven//:io_dropwizard_dropwizard_assets",
        "//160-stress-tester/src/main/proto:160_stress_tester_java_proto",
        "//920-delegate-service-beans:module",
        "//980-commons:module",
        "//400-rest:module",
        "@maven//:com_google_inject_guice",
    ],
)

# to run:
# bazel run //160-stress-tester:generator > output/file.here
java_binary(
    name = "generator",
    main_class = "io.harness.stresstesting.script.StressTestGeneratorApplication",
    resources = [],
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":module_deploy.jar",
    ],
)

run_analysis(
    run_pmd = False,
)
