load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sources")
load("//:macros.bzl", "sonarqube_test")
load("//tools/bazel/pmd:defs.bzl", "pmd")

sources()

java_library(
    name = "maven_deps",
    visibility = ["//visibility:public"],
    exports = [
        "//12-commons:maven_deps",
        "//12-commons:module",
        "//14-api-services-beans:maven_deps",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_eclipse_jgit_org_eclipse_jgit",
        "@maven//:org_projectlombok_lombok",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "test_deps",
    exports = [
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "maven_deps",
        "//:lombok",
        "//14-api-services-beans:module",
        "//19-delegate-tasks-beans/src/main/proto:19_delegate_tasks_beans_java_proto",
        "//19-delegate-tasks-beans/src/main/proto:19_delegate_tasks_beans_proto",
    ],
)

java_library(
    name = "tests",
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:private"],
    deps = [
        "maven_deps",
        "module",
        "test_deps",
        "//:lombok",
        "//990-commons-test:module",
    ],
)

run_tests()

checkstyle()

sonarqube_test(
    name = "sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":maven_deps",
        ":module",
    ],
)

pmd()
