load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_package_tests")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sonarqube_test")
load("//tools/bazel/pmd:defs.bzl", "pmd")
load("//:macros.bzl", "sources")

sources()

shared_dependencies = [
    "@maven//:com_google_guava_guava",
] + [
    "//:lombok",
    "@jira_client//jar",
]

test_dependencies = [
    "@delegate//:com_github_tomakehurst_wiremock_jre8_standalone",
    "@delegate//:org_apache_httpcomponents_httpmime",
] + shared_dependencies + [
    "//990-commons-test:module",
    "//200-functional-test:module",
    "//230-model-test:module",
    "@maven//:com_bertramlabs_plugins_hcl4j",
    "@maven//:com_icegreen_greenmail",
    "@maven//:com_openpojo_openpojo",
    "@maven//:io_github_benas_random_beans",
    "@maven//:junit_junit",
    "@maven//:org_assertj_assertj_core",
    "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_grizzly2",
    "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_inmemory",
    "@maven//:org_mockito_mockito_core",
    "@maven//:org_powermock_powermock_module_junit4",
    "@maven//:pl_pragmatists_JUnitParams",
]

run_tests()

java_library(
    name = "tests",
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//190-deployment-functional-tests/src/test/resources:resource",
    ] + ["//:resource"],
    resources = [
        "//190-deployment-functional-tests/src/test/resources:resource",
    ],
    tags = [
        "aeriform",
        "manual",
    ],
    visibility = ["//visibility:public"],
    deps = test_dependencies,
)

checkstyle()

sonarqube_test(
    name = "sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":module",
    ],
)
