load("@rules_java//java:defs.bzl", "java_binary")
load("//:GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "sources")
load("//:macros.bzl", "sonarqube_test")

sources()

java_library(
    name = "maven_deps",
    visibility = ["//visibility:public"],
    exports = [
    ],
)

java_library(
    name = "module",
    data = [
        "//20-delegate-beans/src/main/proto:20_delegate_beans_java_proto",
    ],
    visibility = ["//visibility:public"],
)

checkstyle()

sonarqube_test(
    name = "sq_mycomponent",
    srcs = ["sources"],
    targets = [
        ":maven_deps",
        ":module",
    ],
)
